--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
 		"watch": "tsx watch src/index.ts",
 		"check": "tsc --noEmit",
 		"build": "tsc",
-		"start": "node dist/index.js"
+		"start": "node dist/index.js",
+		"test": "vitest"
 	},
 	"keywords": [],
 	"author": "",
@@ -18,7 +19,8 @@
 		"@types/node": "^24.3.1",
 		"prisma": "^6.16.0",
 		"tsx": "^4.20.5",
-		"typescript": "^5.9.2"
+		"typescript": "^5.9.2",
+		"vitest": "^3.2.4"
 	},
 	"dependencies": {
 		"@types/express": "^5.0.3",
