--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,20 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "biome check",
-    "format": "biome format --write"
+    "format": "biome format --write",
+    "test": "playwright test",
+    "test:headed": "playwright test --headed",
+    "test:ui": "playwright test --ui",
+    "test:debug": "playwright test --debug",
+    "test:chromium": "playwright test --project=chromium",
+    "test:firefox": "playwright test --project=firefox",
+    "test:webkit": "playwright test --project=webkit",
+    "test:edge": "playwright test --project='Microsoft Edge'",
+    "test:chrome": "playwright test --project='Google Chrome'",
+    "test:mobile": "playwright test --project='Mobile Chrome' --project='Mobile Safari'",
+    "test:desktop": "playwright test --project=chromium --project=firefox --project=webkit",
+    "test:report": "playwright show-report",
+    "test:codegen": "playwright codegen https://frontend.educandoseubolso.blog.br/"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
