fix: update Dockerfile to conditionally generate Prisma client based on DATABASE_URL

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,26 +1,39 @@
+# Dockerfile.dev
 FROM node:20-alpine
 
 WORKDIR /app
 
+# Instala dependências do sistema necessárias (ajuste se precisar de build-tools)
 RUN apk add --no-cache dumb-init git openssh
 
+# Habilita corepack e ativa pnpm
 RUN corepack enable && corepack prepare pnpm@latest --activate
 
+# Copia apenas arquivos de lock / manifest primeiro (cache eficiente)
 COPY package.json pnpm-lock.yaml* ./
+
+# Instala todas as dependências (dev + prod) para ambiente de desenvolvimento
 RUN pnpm install --frozen-lockfile
 
+# Copia o restante do código
 COPY . .
 
-# Generate Prisma client
-RUN pnpx prisma generate
-
-RUN mkdir -p /app/dist /app/generated && \
+# CORREÇÃO: Criar diretório dist e ajustar permissões
+RUN mkdir -p /app/dist && \
     chown -R node:node /app
 
-ENV PORT=3030
-ENV DATABASE_URL="postgresql://admin_educando:Educando@2025@136.248.90.42:5432/educando_db?schema=simuladores"
+# (Opcional) Apenas gera o client do Prisma se DATABASE_URL estiver presente.
+# Isso evita erro de build quando não há DB acessível durante a build.
+ARG DATABASE_URL
+ENV DATABASE_URL=${DATABASE_URL}
+RUN if [ -n "$DATABASE_URL" ]; then pnpx prisma db pull; fi
+RUN pnpx prisma generate || true
 
+ENV PORT=3030
 EXPOSE 3030
 
+# Usa dumb-init para signal handling (opcional) e troca para usuario não-root
 USER node
+
+# Comando típico em dev (assume script "start:dev" no package.json)
 CMD ["pnpm", "run", "start:dev"]
