fix: clean up Dockerfile by removing unnecessary comments and streamlining Prisma client generation

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,31 +2,21 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-# Dependências básicas
 RUN apk add --no-cache dumb-init git openssh bash openssl
 
-# PNPM versão compatível com lockfile
 RUN corepack enable && corepack prepare pnpm@8.15.5 --activate
 
-# Copia manifest + lockfile primeiro
 COPY package.json pnpm-lock.yaml* ./
 
-# Instala dependências
 RUN pnpm install
 
-# Copia código
 COPY . .
 
-# Diretório dist e permissões
-RUN mkdir -p /app/dist && \
-    chown -R node:node /app
-
-# Prisma (apenas generate, SEM db pull durante a build!)
-RUN pnpx prisma generate || true
+RUN pnpm prisma generate
 
 ENV PORT=3030
 EXPOSE 3030
 
 USER node
 
-CMD ["pnpm", "start:dev"]
+CMD ["pnpm", "run", "start:dev"]
