fix: update import paths for PrismaClient and SimulatorType to use relative paths, clean up Dockerfile by removing unnecessary comments and stages

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,28 +2,21 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-# Dependências do sistema
-RUN apk add --no-cache dumb-init bash openssl openssh python3 make g++
+RUN apk add --no-cache dumb-init git openssh bash openssl
 
-# Habilitar PNPM 10 (MESMA versão do seu lockfile)
-RUN corepack enable && corepack prepare pnpm@10.24.0 --activate
+RUN corepack enable && corepack prepare pnpm@8.15.5 --activate
 
-# Copiar arquivos de manifesto
-COPY package.json pnpm-lock.yaml ./
+COPY package.json pnpm-lock.yaml* ./
 
-# Instalar dependências (SEM frozen-lockfile)
 RUN pnpm install
 
-# Copiar resto do projeto
 COPY . .
 
-# Build da aplicação (NODE_ENV=production evita watch)
-RUN pnpm build
-
-# Gerar client do Prisma (versão 6.x)
 RUN pnpm prisma generate
 
 ENV PORT=3030
 EXPOSE 3030
 
-CMD ["node", "dist/main.js"]
+USER node
+
+CMD ["pnpm", "run", "start:dev"]
