--- a/backend/package.json
+++ b/backend/package.json
@@ -75,6 +75,9 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^generated/prisma$": "<rootDir>/../generated/prisma"
+    }
   }
 }
