--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prisma:generate": "prisma generate",
+    "postinstall": "pnpm run prisma:generate"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
@@ -81,9 +83,6 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node",
-    "moduleNameMapper": {
-      "^generated/prisma$": "<rootDir>/../generated/prisma"
-    }
+    "testEnvironment": "node"
   }
 }
