refactor: update Dockerfile to use pnpm 9.0.0 and improve environment variable handling

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,11 +4,17 @@ WORKDIR /app
 
 RUN apk add --no-cache dumb-init git openssh bash openssl
 
-RUN corepack enable && corepack prepare pnpm@8.15.5 --activate
+RUN corepack enable && corepack prepare pnpm@9.0.0 --activate
 
-COPY package.json pnpm-lock.yaml* ./
+ARG DATABASE_URL="postgresql://user:password@localhost:5432/postgres?schema=public"
+ENV DATABASE_URL=${DATABASE_URL}
 
-RUN pnpm install
+ENV PRISMA_SKIP_POSTINSTALL_GENERATE=true
+
+COPY package.json pnpm-lock.yaml* prisma.config.ts ./
+COPY prisma ./prisma
+
+RUN pnpm install --frozen-lockfile
 
 COPY . .
 
