refactor: update Dockerfile to use PNPM version 9.12.3 and add packageManager field in package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "node": "20.x",
     "pnpm": "9.x"
   },
+  "packageManager": "pnpm@9.12.3",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
