chore: harden email simulation feature (security, privacy, robustness)

--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma:generate": "prisma generate",
-    "postinstall": "pnpm run prisma:generate"
+    "postinstall": "pnpm run prisma:generate",
+    "migrate:compile": "tsc scripts/migrate/*.ts --outDir scripts/migrate/dist --module commonjs --target ES2023 --esModuleInterop --skipLibCheck --resolveJsonModule --moduleResolution node --rootDir .",
+    "migrate:run": "node scripts/migrate/dist/scripts/migrate/01-migrate-categories.js && node scripts/migrate/dist/scripts/migrate/02-migrate-authors.js && node scripts/migrate/dist/scripts/migrate/03-migrate-media.js && node scripts/migrate/dist/scripts/migrate/04-migrate-articles.js && node scripts/migrate/dist/scripts/migrate/05-migrate-comments.js"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
@@ -42,6 +44,7 @@
     "dotenv": "^17.2.3",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
+    "resend": "^6.7.0",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
